--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -2,8 +2,10 @@ server {
     listen [::]:443 ssl;
     listen 443 ssl;
     
-    ssl_certificate /etc/ssl/kindynos.mx/cert.pem;
-    ssl_certificate_key /etc/ssl/kindynos.mx/key.pem;
+    ssl_certificate /etc/ssl/kindynos.mx/origin/cert.pem;
+    ssl_certificate_key /etc/ssl/kindynos.mx/origin/key.pem;
+    ssl_client_certificate /etc/ssl/kindynos.mx/origin/root.pem;
+    ssl_verify_client on;
 
     server_name ipfs.kindynos.mx;
 
