--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,12 @@
-version: '3.9'
 services:
   graph-node:
     image: graphprotocol/graph-node
     ports:
       - '8000:8000'
+      - '8001:8001'
       - '8020:8020'
+      - '8030:8030'
+      - '8040:8040'
     depends_on:
       - ipfs
       - postgres
@@ -20,11 +22,11 @@ services:
       - "./.env"
     restart: always
   ipfs:
-    image: ipfs/go-ipfs:latest
+    image: ipfs/kubo:v0.17.0
     ports:
       - '5001:5001'
     volumes:
-      - ./data/ipfs:/data/ipfs
+      - ./data/ipfs:/data/ipfs:Z
     restart: always
   postgres:
     image: postgres:latest
