--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       ipfs: 'https://ipfs.network.thegraph.com/'
       ethereum: '${NETWORK}:${RPC_URL}'
       GRAPH_LOG: info
+      GRAPH_ETHEREUM_MAX_BLOCK_RANGE_SIZE: 100
     env_file:
       - "./.env"
     restart: always
