--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       ipfs: 'https://ipfs.network.thegraph.com/'
       ethereum: '${NETWORK}:${RPC_URL}'
       GRAPH_LOG: info
-      GRAPH_ETHEREUM_MAX_BLOCK_RANGE_SIZE: 100
+      GRAPH_ETHEREUM_CLEANUP_BLOCKS: true
     env_file:
       - "./.env"
     restart: always
